Bug 916972 - Remove unused nsSpread and carried-out margin flags in nsIFrame.h. r=dholbert

Depends on D10798

Differential Revision: https://phabricator.services.mozilla.com/D10799